# otegami

./: .bootstrap.toml  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml
.claude/: verify.sh
.claude/skills/: 01-read-issue.md  02-implement-usecase.md  03-implement-adapter.md  04-implement-handler.md  05-close-issue.md
.sqlx/: query-365f1e086b1d85fb3d66a94a7606cc914fe6fd2cd6dd9300b66e4632e77690d9.json  query-63597fa2b493fbc821742d159b61bfc8b92f86fa3442c849a9d6a7ef2cbd0a9c.json  query-75a1a00d1fdbdc20ba42ac1ab6fd041d57aef435e323e21bcfbd426fd58409d8.json  query-8b4f1c685468f3176a8e1b30cb745abbf7e03f0eaa0750d34b098433b6e8162f.json
apps/cleaner/: Cargo.toml
apps/cleaner/src/: main.rs
apps/web/: Cargo.toml  askama.toml
apps/web/src/: main.rs  rate_limit.rs  state.rs
apps/web/src/handlers/: create.rs  mod.rs  view.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/use_cases/: create_note.rs  mod.rs  purge_notes.rs  view_note.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/entities/: mod.rs  note.rs
crates/domain/src/ports/: clock.rs  mod.rs  note_repository.rs  password_hasher.rs  (+1 more)
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: argon2_hasher.rs  config.rs  crockford_slug.rs  lib.rs  system_clock.rs
crates/infrastructure/src/pg/: mod.rs  note_repository.rs  note_repository_it.rs
docs/: design-spec.md
docs/adr/: 0001-password-and-rate-limit-security-model.md  0002-separate-cleaner-binary.md  0003-ttl-and-burn-deletion-model.md  0004-creation-auth-via-cloudflare-access.md
docs/issues/: issue-01-spec-definition.md  issue-02-dev-foundation.md  issue-03-domain.md  issue-04-usecases.md  issue-05-infrastructure.md  issue-06-web.md  issue-07-cleaner.md  issue-08-cross-cutting.md
docs/operations/: cleaner-scheduling.md  configuration.md  deployment.md
migrations/: 20260624120000_create_notes.sql
templates/: create.html  error.html  note.html  password_form.html
(+5 files in other folders)
