[package]
name = "web"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
domain = { path = "../../crates/domain" }
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }

axum = "0.7"
askama = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
time = "0.3"
anyhow = "1"
governor = "0.6"
