[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
time = "0.3"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "time",
] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
# DB を要する統合テスト。既定では無効。DATABASE_URL を設定して
# `cargo test -p infrastructure --features integration` で実行する。
integration = []
